--- a/erpnext_gocardless_bank/erpnext_gocardless_bank/doctype/gocardless_settings/gocardless_settings.json
+++ b/erpnext_gocardless_bank/erpnext_gocardless_bank/doctype/gocardless_settings/gocardless_settings.json
@@ -1,6 +1,4 @@
 {
- "actions": [],
- "editable_grid": 1,
  "creation": "2022-04-04 04:04:04.119400",
  "doctype": "DocType",
  "engine": "InnoDB",
@@ -9,39 +7,43 @@
   "enabled",
   "main_column",
   "access_section",
-  "secret_id",
-  "secret_key",
-  "access_column",
-  "access_html",
-  "access_button",
-  "transactions_section",
-  "only_sync_transactions_with_id",
-  "ignore_transactions_without_date",
-  "ignore_transactions_without_amount",
-  "ignore_transactions_without_currency",
-  "ignore_transactions_without_existing_currency",
-  "ignore_transactions_without_enabled_currency",
-  "transactions_second_column",
-  "add_supplier_info_if_available",
-  "create_supplier_if_does_not_exist",
+  "access",
+  "bank_account_section",
+  "bank_account_without_currency",
+  "bank_account_currency_doesnt_exist",
+  "bank_account_column",
+  "bank_account_currency_disabled",
+  "bank_transaction_section",
+  "bank_transaction_without_id",
+  "bank_transaction_without_date",
+  "bank_transaction_without_amount",
+  "bank_transaction_column",
+  "bank_transaction_without_currency",
+  "bank_transaction_currency_doesnt_exist",
+  "bank_transaction_currency_disabled",
+  "supplier_section",
+  "supplier_exist_in_transaction",
+  "supplier_in_transaction_doesnt_exist",
+  "supplier_column",
   "supplier_default_group",
-  "create_supplier_bank_account_if_does_not_exist",
-  "transactions_third_column",
-  "add_customer_info_if_available",
-  "create_customer_if_does_not_exist",
-  "create_customer_bank_account_if_does_not_exist",
+  "supplier_bank_account_exist_in_transaction",
+  "customer_section",
+  "customer_exist_in_transaction",
+  "customer_in_transaction_doesnt_exist",
+  "customer_column",
   "customer_default_group",
   "customer_default_territory",
-  "banks_section",
-  "remove_actual_bank_transactions",
-  "banks_column",
-  "remove_actual_bank_accounts",
-  "remove_actual_bank",
-  "private_section",
-  "access_token",
-  "access_expiry",
-  "refresh_token",
-  "refresh_expiry"
+  "customer_bank_account_exist_in_transaction",
+  "bank_remove_section",
+  "clean_bank_dt",
+  "clean_bank_account_dt",
+  "clean_bank_transaction_dt",
+  "bank_remove_column",
+  "clean_currency_dt",
+  "clean_supplier_dt",
+  "clean_customer_dt",
+  "logs_section",
+  "logs_html"
  ],
  "fields": [
   {
@@ -51,8 +53,7 @@
   {
    "fieldname": "enabled",
    "fieldtype": "Check",
-   "label": "Is Enabled",
-   "default": "1"
+   "label": "Is Enabled"
   },
   {
    "fieldname": "main_column",
@@ -60,238 +61,238 @@
   },
   {
    "fieldname": "access_section",
+   "fieldtype": "Section Break"
+  },
+  {
+   "fieldname": "access",
+   "fieldtype": "Table",
+   "label": "Gocardless Access",
+   "options": "Gocardless Access",
+   "bold": 1,
+   "reqd": 1
+  },
+  {
+   "fieldname": "bank_account_section",
    "fieldtype": "Section Break",
-   "label": "Access"
+   "label": "Bank Account Settings",
+   "collapsible": 1
   },
   {
-   "fieldname": "secret_id",
-   "fieldtype": "Data",
-   "label": "Secret ID",
-   "description": "An alpha-numeric <code>UUID</code> string consist of exactly <code>36</code> characters displayed in five groups separated by hyphens",
-   "read_only_depends_on": "eval:!doc.enabled",
-   "mandatory_depends_on": "eval:doc.enabled",
-   "in_list_view": 1
+   "fieldname": "bank_account_without_currency",
+   "fieldtype": "Select",
+   "label": "Bank Account Without Currency",
+   "options": "Ignore\nUse Company Currency"
   },
   {
-   "fieldname": "secret_key",
-   "fieldtype": "Data",
-   "label": "Secret Key",
-   "description": "An alpha-numeric encryption key string consist of exactly <code>128</code> characters",
-   "read_only_depends_on": "eval:!doc.enabled",
-   "mandatory_depends_on": "eval:doc.enabled",
-   "in_list_view": 1
+   "fieldname": "bank_account_currency_doesnt_exist",
+   "fieldtype": "Select",
+   "label": "Bank Account Currency Doesn't Exist",
+   "options": "Ignore\nAdd Currency"
   },
   {
-   "fieldname": "access_column",
+   "fieldname": "bank_account_column",
    "fieldtype": "Column Break"
   },
   {
-   "fieldname": "access_html",
-   "fieldtype": "HTML",
-   "label": "Access Information",
-   "options": "<p>\nYou must log in to <strong>Gocardless's Open Banking Portal</strong> and acquire your personal <strong>Secret ID</strong> and <strong>Secret Key</strong>.\n</p>\n<p>\nYou can sign up to create an account if you do not already have one.\n</p>",
-   "read_only": 1
+   "fieldname": "bank_account_currency_disabled",
+   "fieldtype": "Select",
+   "label": "Bank Account Currency Is Disabled",
+   "options": "Ignore\nEnable Currency"
   },
   {
-   "fieldname": "access_button",
-   "fieldtype": "Button",
-   "label": "Log In / Sign Up",
-   "read_only_depends_on": "eval:!doc.enabled"
-  },
-  
-  {
-   "fieldname": "transactions_section",
+   "fieldname": "bank_transaction_section",
    "fieldtype": "Section Break",
-   "label": "Transactions"
+   "label": "Bank Transaction Settings",
+   "collapsible": 1
   },
   {
-   "fieldname": "only_sync_transactions_with_id",
-   "fieldtype": "Check",
-   "label": "Only Sync Transactions With ID",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "bank_transaction_without_id",
+   "fieldtype": "Select",
+   "label": "Bank Transaction Without ID",
+   "options": "Ignore\nAuto Generate"
   },
   {
-   "fieldname": "ignore_transactions_without_date",
-   "fieldtype": "Check",
-   "label": "Ignore Transactions Without Date",
-   "default": "1",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "bank_transaction_without_date",
+   "fieldtype": "Select",
+   "label": "Bank Transaction Without Date",
+   "options": "Ignore\nUse Today's Date"
   },
   {
-   "fieldname": "ignore_transactions_without_amount",
-   "fieldtype": "Check",
-   "label": "Ignore Transactions Without Amount",
-   "default": "1",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "bank_transaction_without_amount",
+   "fieldtype": "Select",
+   "label": "Bank Transaction Without Amount",
+   "options": "Ignore\nSet Amount To Zero"
   },
   {
-   "fieldname": "ignore_transactions_without_currency",
-   "fieldtype": "Check",
-   "label": "Ignore Transactions Without Currency",
-   "default": "1",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "bank_transaction_column",
+   "fieldtype": "Column Break"
   },
   {
-   "fieldname": "ignore_transactions_without_existing_currency",
-   "fieldtype": "Check",
-   "label": "Ignore Transactions Without Existing Currency",
-   "default": "1",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "bank_transaction_without_currency",
+   "fieldtype": "Select",
+   "label": "Bank Transaction Without Currency",
+   "options": "Ignore\nUse Bank Account Currency",
+   "read_only_depends_on": "eval:doc.bank_account_currency_doesnt_exist === 'Ignore'"
   },
   {
-   "fieldname": "ignore_transactions_without_enabled_currency",
-   "fieldtype": "Check",
-   "label": "Ignore Transactions Without Enabled Currency",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "bank_transaction_currency_doesnt_exist",
+   "fieldtype": "Select",
+   "label": "Bank Transaction Currency Doesn't Exist",
+   "options": "Ignore\nAdd Currency"
   },
   {
-   "fieldname": "transactions_second_column",
-   "fieldtype": "Column Break",
-   "label": "Suppliers"
+   "fieldname": "bank_transaction_currency_disabled",
+   "fieldtype": "Select",
+   "label": "Bank Transaction Currency Is Disabled",
+   "options": "Ignore\nEnable Currency"
   },
   {
-   "fieldname": "add_supplier_info_if_available",
-   "fieldtype": "Check",
-   "label": "Add Supplier Info If Available",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "supplier_section",
+   "fieldtype": "Section Break",
+   "label": "Supplier Settings",
+   "collapsible": 1
   },
   {
-   "fieldname": "create_supplier_if_does_not_exist",
-   "fieldtype": "Check",
-   "label": "Create Supplier If Does Not Exist",
-   "read_only_depends_on": "eval:!doc.enabled || !doc.add_supplier_info_if_available"
+   "fieldname": "supplier_exist_in_transaction",
+   "fieldtype": "Select",
+   "label": "Supplier Exist In Transaction",
+   "options": "Ignore\nProcess"
+  },
+  {
+   "fieldname": "supplier_in_transaction_doesnt_exist",
+   "fieldtype": "Select",
+   "label": "Supplier In Transaction Doesn't Exist",
+   "options": "Ignore\nAdd Supplier",
+   "read_only_depends_on": "eval:doc.supplier_exist_in_transaction === 'Ignore'"
+  },
+  {
+   "fieldname": "supplier_column",
+   "fieldtype": "Column Break"
   },
   {
    "fieldname": "supplier_default_group",
    "fieldtype": "Link",
-   "label": "Default Suppliers Group",
+   "label": "Supplier Default Group",
    "options": "Supplier Group",
-   "read_only_depends_on": "eval:!doc.enabled || !doc.create_supplier_if_does_not_exist",
-   "mandatory_depends_on": "eval:doc.enabled && doc.create_supplier_if_does_not_exist"
+   "read_only_depends_on": "eval:doc.supplier_exist_in_transaction === 'Ignore' || doc.supplier_in_transaction_doesnt_exist === 'Ignore'",
+   "mandatory_depends_on": "eval:doc.supplier_exist_in_transaction === 'Process' && doc.supplier_in_transaction_doesnt_exist === 'Add Supplier'"
   },
   {
-   "fieldname": "create_supplier_bank_account_if_does_not_exist",
-   "fieldtype": "Check",
-   "label": "Create Supplier Bank Account If Does Not Exist",
-   "read_only_depends_on": "eval:!doc.enabled || !doc.add_supplier_info_if_available"
+   "fieldname": "supplier_bank_account_exist_in_transaction",
+   "fieldtype": "Select",
+   "label": "Supplier Bank Account Exist In Transaction",
+   "options": "Ignore\nAdd Bank Account",
+   "read_only_depends_on": "eval:doc.supplier_exist_in_transaction === 'Ignore'"
   },
   {
-   "fieldname": "transactions_third_column",
-   "fieldtype": "Column Break",
-   "label": "Customers"
+   "fieldname": "customer_section",
+   "fieldtype": "Section Break",
+   "label": "Customer Settings",
+   "collapsible": 1
   },
   {
-   "fieldname": "add_customer_info_if_available",
-   "fieldtype": "Check",
-   "label": "Add Customer Info If Available",
-   "read_only_depends_on": "eval:!doc.enabled"
+   "fieldname": "customer_exist_in_transaction",
+   "fieldtype": "Select",
+   "label": "Customer Exist In Transaction",
+   "options": "Ignore\nProcess"
   },
   {
-   "fieldname": "create_customer_if_does_not_exist",
-   "fieldtype": "Check",
-   "label": "Create Customer If Does Not Exist",
-   "read_only_depends_on": "eval:!doc.enabled || !doc.add_customer_info_if_available"
+   "fieldname": "customer_in_transaction_doesnt_exist",
+   "fieldtype": "Select",
+   "label": "Customer In Transaction Doesn't Exist",
+   "options": "Ignore\nAdd Customer",
+   "read_only_depends_on": "eval:doc.customer_exist_in_transaction === 'Ignore'"
+  },
+  {
+   "fieldname": "customer_column",
+   "fieldtype": "Column Break"
   },
   {
    "fieldname": "customer_default_group",
    "fieldtype": "Link",
-   "label": "Default Customers Group",
+   "label": "Customer Default Group",
    "options": "Customer Group",
-   "read_only_depends_on": "eval:!doc.enabled || !doc.create_customer_if_does_not_exist",
-   "mandatory_depends_on": "eval:doc.enabled && doc.create_customer_if_does_not_exist"
+   "read_only_depends_on": "eval:doc.customer_exist_in_transaction === 'Ignore' || doc.customer_in_transaction_doesnt_exist === 'Ignore'",
+   "mandatory_depends_on": "eval:doc.customer_exist_in_transaction === 'Process' && doc.customer_in_transaction_doesnt_exist === 'Add Customer'"
   },
   {
    "fieldname": "customer_default_territory",
    "fieldtype": "Link",
-   "label": "Default Customers Territory",
+   "label": "Customer Default Territory",
    "options": "Territory",
-   "read_only_depends_on": "eval:!doc.enabled || !doc.create_customer_if_does_not_exist",
-   "mandatory_depends_on": "eval:doc.enabled && doc.create_customer_if_does_not_exist"
+   "read_only_depends_on": "eval:doc.customer_exist_in_transaction === 'Ignore' || doc.customer_in_transaction_doesnt_exist === 'Ignore'",
+   "mandatory_depends_on": "eval:doc.customer_exist_in_transaction === 'Process' && doc.customer_in_transaction_doesnt_exist === 'Add Customer'"
   },
   {
-   "fieldname": "create_customer_bank_account_if_does_not_exist",
-   "fieldtype": "Check",
-   "label": "Create Customer Bank Account If Does Not Exist",
-   "read_only_depends_on": "eval:!doc.enabled || !doc.add_customer_info_if_available"
+   "fieldname": "customer_bank_account_exist_in_transaction",
+   "fieldtype": "Select",
+   "label": "Customer Bank Account Exist In Transaction",
+   "options": "Ignore\nAdd Bank Account",
+   "read_only_depends_on": "eval:doc.customer_exist_in_transaction === 'Ignore'"
   },
   {
-   "fieldname": "banks_section",
+   "fieldname": "bank_remove_section",
    "fieldtype": "Section Break",
-   "label": "Banks"
+   "label": "On Bank Remove Settings",
+   "collapsible": 1
   },
   {
-   "fieldname": "remove_actual_bank_transactions",
+   "fieldname": "clean_bank_dt",
    "fieldtype": "Check",
-   "label": "Removing Bank From Gocardless Also Removes The Bank Transactions From ERPNext",
-   "default": "0"
+   "label": "Clean Bank Doctype"
   },
   {
-   "fieldname": "banks_column",
+   "fieldname": "clean_bank_account_dt",
+   "fieldtype": "Check",
+   "label": "Clean Bank Account Doctype",
+   "read_only_depends_on": "eval:doc.clean_bank_dt"
+  },
+  {
+   "fieldname": "clean_bank_transaction_dt",
+   "fieldtype": "Check",
+   "label": "Clean Bank Transaction Doctype",
+   "read_only_depends_on": "eval:doc.clean_bank_dt || doc.clean_bank_account_dt"
+  },
+  {
+   "fieldname": "bank_remove_column",
    "fieldtype": "Column Break"
   },
   {
-   "fieldname": "remove_actual_bank_accounts",
+   "fieldname": "clean_currency_dt",
    "fieldtype": "Check",
-   "label": "Removing Bank From Gocardless Also Removes The Bank Accounts From ERPNext",
-   "default": "0",
-   "read_only_depends_on": "eval:!doc.remove_actual_bank_transactions"
+   "label": "Clean Currency Doctype",
+   "read_only_depends_on": "eval:doc.bank_account_currency_doesnt_exist === 'Ignore' && doc.bank_transaction_currency_doesnt_exist === 'Ignore'"
   },
   {
-   "fieldname": "remove_actual_bank",
+   "fieldname": "clean_supplier_dt",
    "fieldtype": "Check",
-   "label": "Removing Bank From Gocardless Also Removes Bank From ERPNext",
-   "default": "0",
-   "read_only_depends_on": "eval:!doc.remove_actual_bank_accounts"
+   "label": "Clean Supplier Doctype",
+   "read_only_depends_on": "eval:doc.supplier_exist_in_transaction === 'Ignore' || doc.supplier_in_transaction_doesnt_exist === 'Ignore'"
   },
   {
-   "fieldname": "private_section",
+   "fieldname": "clean_customer_dt",
+   "fieldtype": "Check",
+   "label": "Clean Customer Doctype",
+   "read_only_depends_on": "eval:doc.customer_exist_in_transaction === 'Ignore' || doc.customer_in_transaction_doesnt_exist === 'Ignore'"
+  },
+  {
+   "fieldname": "logs_section",
    "fieldtype": "Section Break",
-   "hidden": 1,
-   "print_hide": 1,
-   "report_hide": 1,
-   "no_copy": 1
+   "label": "Error & Info Logs",
+   "collapsible": 1,
+   "hidden": 1
   },
   {
-   "fieldname": "access_token",
-   "fieldtype": "Text",
-   "label": "Access Token",
-   "hidden": 1,
-   "print_hide": 1,
-   "report_hide": 1,
-   "no_copy": 1
-  },
-  {
-   "fieldname": "access_expiry",
-   "fieldtype": "Datetime",
-   "label": "Access Expiry",
-   "hidden": 1,
-   "print_hide": 1,
-   "report_hide": 1,
-   "no_copy": 1
-  },
-  {
-   "fieldname": "refresh_token",
-   "fieldtype": "Text",
-   "label": "Refresh Token",
-   "hidden": 1,
-   "print_hide": 1,
-   "report_hide": 1,
-   "no_copy": 1
-  },
-  {
-   "fieldname": "refresh_expiry",
-   "fieldtype": "Datetime",
-   "label": "Refresh Expiry",
-   "hidden": 1,
-   "print_hide": 1,
-   "report_hide": 1,
-   "no_copy": 1
+   "fieldname": "logs_html",
+   "fieldtype": "HTML",
+   "label": "",
+   "read_only": 1,
+   "hidden": 1
   }
  ],
  "icon": "fa fa-cog",
  "issingle": 1,
- "links": [],
- "modified": "2022-04-04 04:04:04.119400",
+ "modified": "2024-05-17 04:04:04",
  "modified_by": "Administrator",
  "module": "ERPNext Gocardless Bank",
  "name": "Gocardless Settings",
@@ -329,8 +330,5 @@
    "submit": 1,
    "write": 1
   }
- ],
- "sort_field": "modified",
- "sort_order": "DESC",
- "track_changes": 1
+ ]
 }
